--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler</title>
 </head>
@@ -17,14 +19,36 @@
     <header class="jumbotron">
         <h1 class="display-3">Work Day Scheduler</h1>
         <p class="lead">A simple calendar app for scheduling your work day</p>
-        <p id="currentDay" class="lead">January 29, 2020</p>
+        <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
         <!-- Timeblocks go here -->
+
+        <span>9am</span> <input id="inputext" type="textarea"> <button type="button">Click me</button>
+
+        <span>10am</span> <input id="inputext1" type="textarea"> <button type="button1">Click me</button>
+
+        <span>11am</span> <input id="inputext2" type="textarea"> <button type="button2">Click me</button>
+
+        <span>12pm</span> <input id="inputext3" type="textarea"> <button type="button3">Click me</button>
+
+        <span>1pm</span> <input id="inputext4" type="textarea"> <button type="button4">Click me</button>
+
+        <span>2pm</span> <input id="inputext5" type="textarea"> <button type="button5">Click me</button>
+
+        <span>3pm</span> <input id="inputext6" type="textarea"> <button type="button6">Click me</button>
+
+        <span>4pm</span> <input id="inputext7" type="textarea"> <button type="button7">Click me</button>
+
+        <span>5pm</span> <input id="inputext8" type="textarea"> <button type="button8">Click me</button>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
+    <script src="https://momentjs.com/downloads/moment-with-locales.js"></script>
+    <script src="script.js"></script>
+
 </body>
 
 </html
