--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
     <div class="container">
         <!-- Timeblocks go here -->
 
-        <span>9am</span> <input id="inputext" type="textarea"> <button type="button">Click me</button>
+        <span>9am</span> <input id="inputext" type="textarea"> <button type="button">Save</button>
 
-        <span>10am</span> <input id="inputext1" type="textarea"> <button type="button1">Click me</button>
+        <span>10am</span> <input id="inputext1" type="textarea"> <button type="button1">Save</button>
 
-        <span>11am</span> <input id="inputext2" type="textarea"> <button type="button2">Click me</button>
+        <span>11am</span> <input id="inputext2" type="textarea"> <button type="button2">Save</button>
 
-        <span>12pm</span> <input id="inputext3" type="textarea"> <button type="button3">Click me</button>
+        <span>12pm</span> <input id="inputext3" type="textarea"> <button type="button3">Save</button>
 
-        <span>1pm</span> <input id="inputext4" type="textarea"> <button type="button4">Click me</button>
+        <span>1pm</span> <input id="inputext4" type="textarea"> <button type="button4">Save</button>
 
-        <span>2pm</span> <input id="inputext5" type="textarea"> <button type="button5">Click me</button>
+        <span>2pm</span> <input id="inputext5" type="textarea"> <button type="button5">Save</button>
 
-        <span>3pm</span> <input id="inputext6" type="textarea"> <button type="button6">Click me</button>
+        <span>3pm</span> <input id="inputext6" type="textarea"> <button type="button6">Save</button>
 
-        <span>4pm</span> <input id="inputext7" type="textarea"> <button type="button7">Click me</button>
+        <span>4pm</span> <input id="inputext7" type="textarea"> <button type="button7">Save</button>
 
-        <span>5pm</span> <input id="inputext8" type="textarea"> <button type="button8">Click me</button>
+        <span>5pm</span> <input id="inputext8" type="textarea"> <button type="button8">Save</button>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
